--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +7,29 @@
     <title>Document</title>
     <!-- CSS Style link -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- DaisyUi Tailwind -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" /> -->
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <header>
+        <nav class="flex justify-between items-center bg-sky-200 px-10 py-2 rounded-xl shadow-gray shadow-lg ">
+            <div class="mx-[2%]">
+                <h2 class="text-2xl font-bold" >Interactive</h2>
+                <h3 class="text-md font-semibold text-gray-600 ">Geometry Genius</h3>
+            </div>
+            <div>
+                <button class="btn-primary block"> Blog</button>
+            </div>
+        </nav>
+    </header>
  
     
 
 
 
 
-    
+
     <!-- adding Script file -->
     <script src="js/geometry.js"></script>
 </body>
