Parallelogram part done in js

--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
                         <img src="images/Parallelogram.png" alt="">
                     </div>
                     <div class="text-center">
-                        <h3 class="text-xl">Parallelogram</h3>
-                    <p>Area (A) = 0.5 * b * h</p>
+                        <h3 id="Parallelogram" class="text-xl">Parallelogram</h3>
+                    <p>Area (A) = * b * h</p>
+                    
                     <div class="flex justify-center pb-3">
-                        <input class="w-[80px]" type="text" placeholder="b"><p>cm</p><input class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
+                        <input id="parallelogram-b" class="w-[80px]" type="text" placeholder="b"><p>cm</p><input id="parallelogram-h" class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
                         
                     </div>
-                    <button class="btn-calculate m-auto">Calculate</button>
+                    <button id="parallelogram-calculate" class="btn-calculate m-auto">Calculate</button>
                     </div>                    
                 </div> 
 
