--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                         <img src="images/rhombus.png" alt="">
                     </div>
                     <div class="text-center">
-                        <h3 class="text-xl">Rhombus</h3>
+                        <h3 id="rhombus" class="text-xl">Rhombus</h3>
                     <p>Area (A) = 0.5 * d<small>1</small> * d<small>2</small></p>
                     <div class="flex justify-center pb-3">
-                        <input class="w-[80px]" type="text" placeholder="b"><p>cm</p><input class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
+                        <input id="rhombus-d1" class="w-[80px]" type="text" placeholder="b"><p>cm</p><input id="rhombus-d2" class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
                       
                     </div>
-                    <button class="btn-calculate m-auto">Calculate</button>
+                    <button id="rhombus-calculate" class="btn-calculate m-auto">Calculate</button>
                     </div>                    
                 </div> 
 
