--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                         <img src="images/pentagon.png" alt="">
                     </div>
                     <div class="text-center">
-                        <h3 class="text-xl">Pentagon</h3>
-                    <p>Area (A) = 0.5 * b * h</p>
+                        <h3 id="pentagon" class="text-xl">Pentagon</h3>
+                    <p>Area (A) = 0.5 * p * b</p>
                     <div class="flex justify-center pb-3">
-                        <input class="w-[80px]" type="text" placeholder="b"><p>cm</p><input class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
+                        <input id="pentagon-p" class="w-[80px]" type="text" placeholder="p"><p>cm</p><input id="pentagon-b" class="w-[80px]" type="text" placeholder="b"> <p>cm</p>
                         
                     </div>
-                    <button class="btn-calculate m-auto">Calculate</button>
+                    <button id="pentagon-calculate" class="btn-calculate m-auto">Calculate</button>
                     </div>                    
                 </div> 
 
