ellipse card work done in js

--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
                     </div>                    
                 </div> 
 
-                <!-- Ellipse -->
+                                <!-- Ellipse -->
                  <div class="card-made bg-gray-200 m-4">
                     <div class="p-5 justify-center">
                         <img src="images/ellipse.png" alt="">
                     </div>
                     <div class="text-center">
-                        <h3 class="text-xl">Ellipse</h3>
-                    <p>Area (A) = 0.5 * b * h</p>
+                        <h3 id="ellipse" class="text-xl">Ellipse</h3>
+                    <p>Area (A) = 3.14*a*b</p>
                     <div class="flex justify-center pb-3">
-                        <input class="w-[80px]" type="text" placeholder="b"><p>cm</p><input class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
+                        <input id="ellipse-a" class="w-[80px]" type="text" placeholder="a"><p>cm</p><input id="ellipse-b" class="w-[80px]" type="text" placeholder="b"> <p>cm</p>
                         
                     </div>
-                    <button class="btn-calculate m-auto">Calculate</button>
+                    <button id="ellipse-calculate" class="btn-calculate m-auto">Calculate</button>
                     </div>                    
                 </div> 
                 
