--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3 class="text-md font-semibold text-gray-600 ">Geometry Genius</h3>
             </div>
             <div>
-                <button class="btn-primary block"> Blog</button>
+                <a href="blog.html" target="_blank"><button class="btn-blog block">Blog </button></a>
             </div>
         </nav>
     </header>
@@ -32,11 +32,11 @@
                         MAIN
                     ------------- -->
     <main>        
-        <section class=" flex flex-col md:flex-row ">
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 w-[70%]">
+        <section class=" flex flex-col md:flex-row gap-x-4 m-[1%]">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 w-full mx-auto md:w-[70%]">
 
                                 <!-- Traingle -->
-                 <div class="card-made bg-gray-200 m-4">
+                 <div class="card-made  m-4">
                     <div class="p-5 justify-center">
                         <img src="images/triangle.png" alt="">
                     </div>
@@ -52,7 +52,7 @@
                 </div> 
 
                                 <!-- Rectrangle -->
-                 <div class="card-made bg-gray-200 m-4">
+                 <div class="card-made  m-4">
                     <div class="p-5 justify-center">
                         <img src="images/rectangle.png" alt="">
                     </div>
@@ -60,7 +60,7 @@
                         <h3 id="rectrangle" class="text-xl">Rectrangle</h3>
                     <p>Area (A) = W * l</p>
                     <div class="flex justify-center pb-3">
-                        <input id="rectrangle-w" class="w-[80px]" type="text" placeholder="W"><p>cm</p><input id="rectrangle-i" class="w-[80px]" type="text" placeholder="I"> <p>cm</p>
+                        <input id="rectrangle-w" class="w-[80px]" type="text" placeholder="w"><p>cm</p><input id="rectrangle-l" class="w-[80px]" type="text" placeholder="l"> <p>cm</p>
                         
                     </div>
                         <button id="rectrangle-calculate" class="btn-calculate m-auto">Calculate</button>
@@ -68,7 +68,7 @@
                 </div> 
 
                                 <!-- Parallelogram -->
-                 <div class="card-made bg-gray-200 m-4">
+                 <div class="card-made  m-4">
                     <div class="p-5 justify-center">
                         <img src="images/Parallelogram.png" alt="">
                     </div>
@@ -85,7 +85,7 @@
                 </div> 
 
                                  <!-- Rhombus -->
-                 <div class="card-made bg-gray-200 m-4">
+                 <div class="card-made  m-4">
                     <div class="p-5 justify-center">
                         <img src="images/rhombus.png" alt="">
                     </div>
@@ -93,7 +93,7 @@
                         <h3 id="rhombus" class="text-xl">Rhombus</h3>
                     <p>Area (A) = 0.5 * d<small>1</small> * d<small>2</small></p>
                     <div class="flex justify-center pb-3">
-                        <input id="rhombus-d1" class="w-[80px]" type="text" placeholder="b"><p>cm</p><input id="rhombus-d2" class="w-[80px]" type="text" placeholder="h"> <p>cm</p>
+                        <input id="rhombus-d1" class="w-[80px]" type="text" placeholder="d1"><p>cm</p><input id="rhombus-d2" class="w-[80px]" type="text" placeholder="d2"> <p>cm</p>
                       
                     </div>
                     <button id="rhombus-calculate" class="btn-calculate m-auto">Calculate</button>
@@ -101,7 +101,7 @@
                 </div> 
 
                                 <!-- Pentagon -->
-                 <div class="card-made bg-gray-200 m-4">
+                 <div class="card-made  m-4">
                     <div class="p-5 justify-center">
                         <img src="images/pentagon.png" alt="">
                     </div>
@@ -117,7 +117,7 @@
                 </div> 
 
                                 <!-- Ellipse -->
-                 <div class="card-made bg-gray-200 m-4">
+                 <div class="card-made  m-4">
                     <div class="p-5 justify-center">
                         <img src="images/ellipse.png" alt="">
                     </div>
@@ -135,20 +135,20 @@
             </div>
 
             <!-- Area Calculation -->
-            <div class=" w-full md:w-[30%] lg:w-[30%] mx-auto bg-red-200">
-                <h2 class="text-center font-bold text-2xl underline" >Area Calculation</h2>
+            <div class=" w-full md:w-[30%] lg:w-[30%] mx-auto border-gray-700 my-border m-[1%]">
+                <h2 class="text-center font-bold text-2xl underline pt-2" >Area Calculation</h2>
 
                  <!-- Table -->
                  <div class="overflow-x-auto">
-                    <table class="table w-full">
+                    <table class="table ">
                       <!-- head -->
                       <thead>
-                        <tr>
+                        <!-- <tr>
                           <th></th>
                           <th>Name</th>
                           <th>Job</th>
                           <th>Favorite Color</th>
-                        </tr>
+                        </tr> -->
                       </thead>
                       <tbody id="table-container">
                         <!-- row 1
