--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     ------------- -->
     <main>        
         <section class=" flex flex-col md:flex-row gap-x-4 m-[1%]">
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 w-full mx-auto md:w-[70%]">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 sm:w-full mx-auto md:w-[70%]">
 
                                 <!-- Traingle -->
                  <div class="card-made  m-4">
@@ -135,7 +135,7 @@
             </div>
 
             <!-- Area Calculation -->
-            <div class=" w-full md:w-[30%] lg:w-[30%] mx-auto border-gray-700 my-border m-[1%]">
+            <div class=" sm:w-full md:w-[30%] lg:w-[30%] mx-auto border-gray-700 my-border m-[1%]">
                 <h2 class="text-center font-bold text-2xl underline pt-2" >Area Calculation</h2>
 
                  <!-- Table -->
